--- a/quickfortran.tex
+++ b/quickfortran.tex
@@ -30,11 +30,9 @@
 \pagebreak
 \input{resources.tex}
 \pagebreak
-%\input{exercises.tex}
+\input{exercises.tex}
 
 \appendix
-
-%\input{code.tex}
 
 \end{document}
 
