Fixed link in introduction.

--- a/00_introduction.tex
+++ b/00_introduction.tex
@@ -8,7 +8,7 @@ You'll also find a links and resources section at the end which consists of the 
 Each example code in this book may be compiled and run. I will try to keep all examples short so that they demonstrate only the concept at hand. 
 You may find all the examples for download at either
  \href{http://http://people.duke.edu/~kec30/}{my website}, the book's
- \href{http://http://people.duke.edu/~kec30/}{github page} (where you can also get the TeX source for this document), or simply copy and paste them.
+ \href{https://github.com/KEClaytor/QuickDirtyFortran}{github page} (where you can also get the TeX source for this document), or simply copy and paste them.
 
 You're welcome to skip to the next page to get going, but if you want I will say a little about the language here.
 FORTRAN (short for FORmula TRANslation) was invented back in 1957 for use with punchcard machines. 
