Added script to make all files in a folder. Fixed some URL's.

--- a/00_introduction.tex
+++ b/00_introduction.tex
@@ -7,7 +7,7 @@ You'll also find a links and resources section at the end which consists of the 
 
 Each example code in this book may be compiled and run. I will try to keep all examples short so that they demonstrate only the concept at hand. 
 You may find all the examples for download at either
- \href{http://http://people.duke.edu/~kec30/}{my website}, the book's
+ \href{http://people.duke.edu/~kec30/}{my website}, the book's
  \href{https://github.com/KEClaytor/QuickDirtyFortran}{github page} (where you can also get the TeX source for this document), or simply copy and paste them.
 
 You're welcome to skip to the next page to get going, but if you want I will say a little about the language here.
@@ -21,7 +21,7 @@ Many popular mathematical libraries, such as BLAS and LAPACK (linear algebra lib
 
 Finally, this guide is written for Fortran 2008, but with a large codebase and many previous versions you may find yourself
  working with older versions of Fortran code. 
-I'll end this introduction with a tool I found immensely useful; the \href{http://www.polyhedron.com/plusfortonline.php}{FORTRAN 77 - F90 Converter}.
+I'll end this introduction with a tool I found immensely useful; the \href{http://www.polyhedron.com/plusfortonline.php}{F77 - F90 Converter}.
  At the very least this takes you from older F77 code, to the much nicer F90 code.
 
 Good luck with your forrays into Fortran, I hope you find the rest of this guide useful.
