--- a/exercises.tex
+++ b/exercises.tex
@@ -1,12 +1,17 @@
 
-\section{Basics}
+\section{Exercises}
 
 \subsection{01 Basics}
 \begin{enumerate}
- \item 
+ \item Turn \verb!p01_program.f08! into a typical ``Hello World!'' program.
+
+ \item Print the variables in \verb!p02_variables.f08!. (Do you have to assign the variables first?)
+
  \item In \verb!p05_fileio.f08! we encounter an error if our vector M contains more elements than entries in the text file. Fix this problem.
 
 Hint: use a do-loop
 
 Advanced: What if the file contains more entries than the size of our vector M?
+
+ \item 
 \end{enumerate}
