--- a/01_basics.tex
+++ b/01_basics.tex
@@ -75,7 +75,29 @@ Formated writes
 \end{quote}
 
 \subsection{Code Control}
-Formated writes
+
+Loops are handled with do:
 \begin{quote}
-\verbatiminput{01_BasicsCode/p04_format.f08}
+\verbatiminput{01_BasicsCode/p06_do.f08}
+\end{quote}
+
+If statments can be expanded into if else with the usual set of logical operators
+ (\texttt{<, >, <=, >=, ==, /=}) and statement combinations
+ (\texttt{.and., .or., .not., .eqv., .neqv.}) supported:
+\begin{quote}
+\verbatiminput{01_BasicsCode/p07_ifelse.f08}
+\end{quote}
+
+\noindent There is also some more fine-grain loop control with:
+
+\texttt{exit} will exit a loop
+
+\texttt{cycle} passes up to the next enddo
+\begin{quote}
+\verbatiminput{01_BasicsCode/p08_doec.f08}
+\end{quote}
+
+\noindent You can also use implied do loops with parentheses:
+\begin{quote}
+\verbatiminput{01_BasicsCode/p09_doi.f08}
 \end{quote}
